--- a/demo/21.html
+++ b/demo/21.html
@@ -1,19 +1,44 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Python编辑器-我的VSCode配置</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Python编辑器-我的VSCode配置</title>
+  <style>
+    #container {
+      width: 100%;
+      max-width: 800px;
+      margin: 0 auto;
+    }
+
+    #header {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    #header h1 {
+      font-size: 2rem;
+    }
+
+    #body {
+      line-height: 1.8rem;
+    }
+
+    #footer {
+      text-align: right;
+      margin-top: 20px;
+      font-size: 0.8rem;
+    }
+  </style>
 </head>
 <body>
-    <div id="container">
-        <div id="header">
-            <h1>Python编辑器-我的VSCode配置</h1>
-        </div>
-        <div id="body">
-            <p>VSCode 是一款由微软开发、非常流行的代码编辑器：功能强大、简单易用。</p>
+  <div id="container">
+    <div id="header">
+      <h1>Python编辑器-我的VSCode配置</h1>
+    </div>
+    <div id="body">
+      <p>VSCode 是一款由微软开发、非常流行的代码编辑器：功能强大、简单易用。</p>
 <h2>为什么不是其他编辑器</h2>
 <p>可以编辑 Python 的编辑器很多，但是为什么选择 VSCode 呢？</p>
 <p><strong>PyCharm</strong>：太重了，并且是付费软件。社区版免费，但无法在 PyCharm 中使用 jupyter notebook。并且实话说，我感觉 PyCharm 的学习曲线相对陡峭(下载过一次，感觉配置起来没有 VSCode 简单)。</p>
@@ -149,17 +174,20 @@
 <span class="pl-ent">"window.zoomLevel"</span>: <span class="pl-c1">1</span>,
 
 }</pre></div>
-        </div>
-        <div id="footer">
-            <p>
-                <!-- 作者:  -->
-                <br>
-                发布时间: 2024-01-08 03:21:55+00:00
-                <br>
-                <!-- 评论数:  -->
-                <br>
-            </p>
-        </div>
     </div>
+    <div id="footer">
+      <p>
+        <!-- 作者:  -->
+        <br>
+        发布时间: 2024-01-08 03:21:55+00:00
+        <br>
+        <!-- 评论数:  -->
+        <br>
+      </p>
+    </div>
+  </div>
+  <footer>
+    <p>Copyright &copy; 2024 geoqiao</p>
+    </footer>
 </body>
 </html>
